# opengl-sandbox

./: .gitattributes  .gitignore  ArcballCamera2.cpp  ArcballCamera2.h  CMakeLists.txt  Doxyfile  LICENSES.txt  OpenGL-Sandbox.sln  OpenGL-Sandbox.vcxproj  OpenGL-Sandbox.vcxproj.filters  README.md
res/: coordSystem3d_frag.glsl  coordSystem3d_vert.glsl  coordSystemSimple_vert.glsl  coordSystem_frag.glsl  coordSystem_vert.glsl  flat_material_frag.glsl  flat_material_vert.glsl  frag_simple.glsl  frag_texture.glsl  fragment.glsl  phong_light_frag.glsl  phong_light_vert.glsl  phong_material_frag.glsl  phong_material_vert.glsl  simple_lamp_frag.glsl  simple_lamp_vert.glsl  simple_light_frag.glsl  simple_light_vert.glsl  vert_simple.glsl  vert_texture.glsl  vertex.glsl
src/: CMakeLists.txt  Camera.cpp  Camera.h  IupWindow.cpp  IupWindow.h  Keycodes.hpp  Lighting.cpp  Lighting.h  Material.cpp  Material.h  MaterialBase.cpp  MaterialBase.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MouseSelector.cpp  MouseSelector.h  PhongMaterial.cpp  PhongMaterial.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureData.cpp  TextureData.h  Uniform.cpp  Uniform.h  WindowBase.cpp  WindowBase.h  main.cpp  sandbox.cpp  tests.cpp  windowTest1.cpp
src/arcball-cpp/: arcball_camera.cpp  arcball_camera.h
src/camera/: ArcballCamera.cpp  ArcballCamera.h  ArcballCamera2.cpp  ArcballCamera2.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraBase.cpp  CameraBase.h  OrbitCamera.cpp  OrbitCamera.h  SimpleCamera.cpp  SimpleCamera.h
src/events/: CMakeLists.txt  Event.cpp  Event.h  Event.hpp  EventBus.cpp  EventBus.h  EventEmitter.cpp  EventEmitter.h  EventEmitter.hpp  EventListener.cpp  EventListener.h  EventListener.hpp  EventManager.cpp  EventManager.h  Keycodes.hpp  WindowEvents.hpp
src/glad/: CMakeLists.txt  glad.c  glad.h
src/material/: CMakeLists.txt  FlatMaterial.cpp  FlatMaterial.h  MaterialBase.cpp  MaterialBase.h  MaterialLibrary.cpp  MaterialLibrary.h  MaterialUniform.cpp  MaterialUniform.h  PhongMaterial.cpp  PhongMaterial.h  UniformRef.cpp
src/mesh/: CMakeLists.txt  DynamicMesh.cpp  DynamicMesh.h  DynamicMeshFactory.cpp  DynamicMeshFactory.h  MeshBase.cpp  MeshBase.h  MeshFactory.cpp  MeshFactory.h  StaticMesh.cpp  StaticMesh.h  StaticMeshFactory.cpp  StaticMeshFactory.h
src/renderer/: CMakeLists.txt  GLStateHandler.cpp  GLStateHandler.h  IRenderable.hpp  MasterRenderer.cpp  MasterRenderer.h  RenderCommand.hpp  Renderer.cpp  Renderer.h  RendererBase.cpp  RendererBase.h  RendererMaster.cpp  RendererMaster.h  SimpleRenderCommand.hpp  SimpleRenderer.cpp  SimpleRenderer.h  VoxelRenderer.cpp  VoxelRenderer.h
src/scene/: OctreeManager.cpp  OctreeManager.h  OctreeNode.cpp  OctreeNode.h
src/shader/: CMakeLists.txt  Shader.h  ShaderFactory.cpp  ShaderFactory.h  ShaderProgram.cpp  ShaderProgram.h
src/stb/: CMakeLists.txt
src/voxel/: BlockManager.cpp  BlockManager.h  BlockMeshGenerator.cpp  BlockMeshGenerator.h  Bresenham3D.hpp  CMakeLists.txt  MouseSelector.cpp  MouseSelector.h  Section.cpp  Section.h  VoxelFloor.cpp  VoxelFloor.h  VoxelGround.cpp  VoxelGround.h  VoxelPlane.cpp  VoxelPlane.h  VoxelScene.cpp  VoxelScene.h
src/window/: CMakeLists.txt  IupUiWindow.cpp  IupUiWindow.h  IupWindow.cpp  IupWindow.h  IupWindowBase.cpp  IupWindowBase.h  WindowBase.cpp  WindowBase.h
